[package]
name = "le_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
log4rs = "1.2.0"
lazy_static = "1.4.0"
dlopen = "0.1.8"
shellexpand = "3.1.0"
libc = "0.2.153"
serde = { version = "1.0.219", features = ["alloc", "derive"] }
serde_yaml = "0.9.27"
serde_json = { version = "1.0.140", features = ["std", "alloc"] }
base64 = "0.22.1"
memmap2 = "0.9.5"
uuid = { version = "1.16.0", features = ["v4"] }

[lib]
name = "le_lib"
crate-type = ["cdylib"]
