[package]
name = "udev_forwarder"
version = "0.1.0"
edition = "2021"

[lib]
name = "udev_forwarder"
path = "src/lib.rs"

[[bin]]
name = "udev-forwarder"
path = "src/bin/forwarder.rs"

[[bin]]
name = "udev-receiver"
path = "src/bin/receiver.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"
